--- a/index.html
+++ b/index.html
@@ -255,9 +255,10 @@
     <div class="modal__links">
       <!-- Points to the uploaded PDF (place this file under assets/docs/ in your project) -->
       <a class="btn btn--outline"
-      href="assets/docs/SWE216_Presentation%5B1%5D.pdf"
-      type="application/pdf"
-      download="Student-Impact-Hub-PowerPoint.pdf">Download PowerPoint (PDF)</a>
+   href="/SWE216_Presentation.pdf"
+   type="application/pdf"
+   download="SWE216_Presentation.pdf">Download PowerPoint (PDF)</a>
+
     </div>
   </div>
 </dialog>
